Fix Safari navigation vertical alignment

--- a/_sass/modules/_navigation.scss
+++ b/_sass/modules/_navigation.scss
@@ -18,6 +18,7 @@ nav {
   border-bottom: 1px solid $light-gray;
   @include clearfix;
   margin-top: $small-spacing;
+  padding-bottom: $small-spacing;
 
   // Nav menu
 
@@ -31,6 +32,7 @@ nav {
     width: 100%;
     white-space: nowrap;
     overflow-x: auto;
+    line-height: .75;
 
     &.show {
       display: block;
@@ -43,6 +45,7 @@ nav {
     background: transparent;
     display: inline-block;
     overflow: hidden;
+    line-height: 1.5;
 
     &.active a {
         background: $light-gray;
@@ -75,16 +78,16 @@ nav {
   ul li.nav-close {
     border: 1px solid $medium-gray;
     border-radius: 50%;
-    height: 2em;
+    height: 2.3em;
     text-align: center;
-    width: 2em;
+    width: 2.3em;
+    line-height: 2.3em;
     position: relative;
-    bottom: 5px;
+    top: -1px;
 
     a {
       display: block;
       padding: 0;
-      line-height: 2;
     }
   }
 
